--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </section>
 
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JGDS4Apo58g?si=Y_CMESXC4DMNTZki" 
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=S7gMzYqXIZc" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div class="description">
-            <p>De mi para ti Esmeralda niña tonta 💛 Te quiero mucho.</p>
+            <p>De mi para ti, Urpi... niña tonta 💛 Te quiero mucho.</p>
         </div>
     </div>
 </body>
